<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.casadalagoa.kompanion.principal$PlaceholderFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="45dp"
                android:id="@+id/img_ar"
                android:src="@drawable/ic_higlass"
                android:contentDescription="@string/imagem_ar" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lista_devices" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lay_clima"
            android:textAlignment="center"
            android:clickable="false"
            android:baselineAligned="false"
            android:gravity="center_horizontal|fill_vertical"
            android:focusable="false"
            android:paddingTop="5dp"
            android:layout_weight="0"
            android:visibility="gone">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:dividerPadding="2dp"
                android:focusable="false"
                android:gravity="fill_horizontal|fill_vertical"
                android:layout_gravity="center"
                android:background="#11000000"
                android:focusableInTouchMode="false">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/lay_temp"
                    android:layout_weight="2"
                    android:gravity="fill_vertical"
                    android:baselineAligned="false">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/temperatura"
                        android:id="@+id/lb_temp"
                        android:layout_gravity="center_horizontal" />

                    <NumberPicker
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/numberPicker"
                        android:orientation="horizontal"
                        android:background="#11000000"
                        android:baselineAligned="false" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:showDividers="beginning|middle"
                    android:id="@+id/lay_modes"
                    android:focusableInTouchMode="false"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/modo_str"
                        android:id="@+id/textView3"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal" />

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/md_spinner"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:layout_weight="2"
                        android:clickable="true"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/fan_str"
                        android:id="@+id/textView"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"/>

                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/fan_spinner"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="2"
                        android:textAlignment="center" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/send"
                        android:id="@+id/bt_enviar"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/desliga"
                        android:id="@+id/bt_desliga"
                        android:layout_weight="1" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/lay_ilum"
            android:focusableInTouchMode="false"
            android:visibility="visible"
            android:gravity="center"
            android:layout_weight="2">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="fill_horizontal|center_horizontal"
                android:weightSum="1">

                <ToggleButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleButton"
                    android:textOn="Ligado"
                    android:textOff="Desligado" />

                <ToggleButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleButton2"
                    android:textOn="Ligado"
                    android:textOff="Desligado"
                    android:layout_gravity="center_horizontal" />

                <ToggleButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleButton3"
                    android:textOn="Ligado"
                    android:textOff="Desligado"
                    android:layout_gravity="center_horizontal" />

                <ToggleButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleButton4"
                    android:textOn="Ligado"
                    android:textOff="Desligado"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/lay_devices"
            android:focusableInTouchMode="false"
            android:visibility="gone"
            android:layout_weight="0">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/linearLayout"
                android:clickable="true"
                android:visibility="visible" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/black_overlay"
                    android:divider="@color/black_overlay"
                    android:focusableInTouchMode="false"
                    android:id="@+id/lay_tv1"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:visibility="visible" >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/tv_liga"
                        android:layout_weight="1"
                        android:textColor="#FF0000"
                        android:textColorHighlight="#FFffff"
                        android:textSize="22sp"
                        android:textColorHint="#ff0000"
                        android:enabled="true"
                        android:text="@string/tv_liga"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/tv_ca_mais"
                        android:id="@+id/tv_ca_mais"
                        android:layout_weight="1"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#FF0000"
                        android:textSize="20sp"
                        android:textColorHint="#ff0000"
                        android:enabled="true"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/tv_vol_mais"
                        android:id="@+id/tv_vol_mais"
                        android:layout_weight="1"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#FF0000"
                        android:textSize="20sp"
                        android:textColorHint="#ff0000"
                        android:enabled="true"
                        android:textStyle="bold"
                        android:longClickable="true" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/black_overlay"
                    android:divider="@color/black_overlay"
                    android:focusableInTouchMode="false"
                    android:id="@+id/lay_tv2"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:visibility="visible" >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/tv_input"
                        android:layout_weight="1"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#FF0000"
                        android:textSize="20sp"
                        android:textColorHint="#ff0000"
                        android:enabled="true"
                        android:text="@string/tv_input"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:id="@+id/tv_ca_menos"
                        android:layout_weight="1"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#FF0000"
                        android:textSize="20sp"
                        android:textColorHint="#ff0000"
                        android:enabled="true"
                        android:textStyle="bold"
                        android:text="@string/tv_ca_menos" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/tv_vol_menos"
                        android:id="@+id/tv_vol_menos"
                        android:layout_weight="1"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#FF0000"
                        android:textSize="20sp"
                        android:textColorHint="#ff0000"
                        android:enabled="true"
                        android:textStyle="bold"
                        android:longClickable="true"
                         />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/black_overlay"
                    android:divider="@color/black_overlay"
                    android:focusableInTouchMode="false"
                    android:id="@+id/lay_tv3"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:visibility="visible"
                    android:isScrollContainer="false" >

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/tv_anterior"
                        android:id="@+id/tv_ant"
                        android:layout_weight="1"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#7cd7ff"
                        android:textSize="20sp"
                        android:textColorHint="#ff0000"
                        android:enabled="true"
                        android:textStyle="bold"
                        android:longClickable="true" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/tv_ok"
                        android:id="@+id/tv_ok"
                        android:layout_weight="1"
                        android:textColor="#00FF00"
                        android:textColorHighlight="#7cd7ff"
                        android:textSize="20sp"
                        android:textColorHint="#ff0000"
                        android:enabled="true"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/tv_left"
                        android:id="@+id/tv_left"
                        android:layout_weight="1"
                        android:textColor="#FFFFFF"
                        android:textColorHighlight="#7cd7ff"
                        android:textSize="20sp"
                        android:textColorHint="#ff0000"
                        android:enabled="true"
                        android:textStyle="bold"
                        android:longClickable="true" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/lay_amb"
            android:focusableInTouchMode="false"
            android:layout_weight="2">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tmp_amb"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    android:text="@string/Aguardando" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
